# Projeto---MercadoLivre

./: README.md  pyproject.toml
backend/: database.py  models.py  schema.py
